WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35995
Fix build breakage with ENABLE_3D_CANVAS=0
https://bugs.webkit.org/show_bug.cgi?id=35995
Summary
Fix build breakage with ENABLE_3D_CANVAS=0
Kenneth Russell
Reported
2010-03-10 16:55:35 PST
A couple of places are currently broken in the build when ENABLE_3D_CANVAS is set to 0. These need to be fixed.
Attachments
Patch
(1.61 KB, patch)
2010-03-10 17:48 PST
,
Kenneth Russell
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2010-03-10 17:48:11 PST
Created
attachment 50459
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-03-10 18:58:06 PST
Comment on
attachment 50459
[details]
Patch yay.
Kenneth Russell
Comment 3
2010-03-11 13:40:08 PST
Committed
r55854
: <
http://trac.webkit.org/changeset/55854
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug