2010-03-11  Kenneth Russell  <kbr@google.com>

Reviewed by Dimitri Glazkov.

        Fix build breakage with ENABLE_3D_CANVAS=0
        https://bugs.webkit.org/show_bug.cgi?id=35995

        No new tests; verified in Chromium that WebGL is disabled in
        ENABLE_3D_CANVAS=0 builds.

        * bindings/v8/custom/V8DocumentCustom.cpp:
        * bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:


git-svn-id: svn://svn.chromium.org/blink/trunk@55854 bbb929c8-8fbe-4397-9dbb-9b2b20218538