third_party/WebKit/WebCore/bindings/v8/custom/V8DocumentCustom.cpp
@@ -47,7 +47,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "V8IsolatedContext.h"
 #include "V8Node.h"
 #include "V8Proxy.h"
+#if ENABLE(3D_CANVAS)
 #include "V8WebGLRenderingContext.h"
+#endif
 #include "V8XPathNSResolver.h"
 #include "V8XPathResult.h"
 
