third_party/WebKit/WebCore/bindings/v8/custom/V8HTMLCanvasElementCustom.cpp
@@ -40,7 +40,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "V8CanvasRenderingContext2D.h"
 #include "V8Node.h"
 #include "V8Proxy.h"
+#if ENABLE(3D_CANVAS)
 #include "V8WebGLRenderingContext.h"
+#endif
 
 namespace WebCore {
 
